[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "C2Client"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "setuptools",
    "pycryptodome==3.23.0",
    "grpcio==1.78.0",
    "PyQt6==6.7.0",
    "pyqtdarktheme",
    "protobuf==6.33.5",
    "gitpython==3.1.47",
    "requests==2.33.0",
    "pwn==1.0",
    "pefile==2024.8.26",
    "openai==1.102.0",
    "donut-shellcode @ git+https://github.com/maxDcb/donut.git@master",
    "markdown"
]

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "pytest-qt==4.5.0"
]

[tool.setuptools.packages.find]
where = [".", "vendor/PentestAssistant"]
include = ["C2Client*", "C2Client.TerminalModules.*", "agent_core*"]

[tool.setuptools.package-data]
C2Client = [
    "images/*.svg",
    "logs/*",
    "Scripts/*.py",
    "server.crt",
    "DropperModules.conf",
    "ShellCodeModules.conf"
]
agent_core = ["py.typed"]

[project.scripts]
c2client = "C2Client.GUI:main"  # Entry point for CLI tool
