add_executable(testClient "testClient.cpp" )

if(spdlog_FOUND)
	if(WIN32)
		target_link_libraries(testClient SocketHandler boost::boost spdlog::spdlog )
	else()
		target_link_libraries(testClient SocketHandler boost::boost pthread spdlog::spdlog )
	endif()
else()
	if(WIN32)
		target_link_libraries(testClient SocketHandler boost::boost )
	else()
		target_link_libraries(testClient SocketHandler boost::boost pthread )
	endif()
endif()



add_executable(testServer "testServer.cpp" )

if(spdlog_FOUND)
	if(WIN32)
		target_link_libraries(testServer SocketHandler boost::boost spdlog::spdlog )
	else()
		target_link_libraries(testServer SocketHandler boost::boost pthread spdlog::spdlog )
	endif()
else()
	if(WIN32)
		target_link_libraries(testServer SocketHandler boost::boost )
	else()
		target_link_libraries(testServer SocketHandler boost::boost pthread )
	endif()
endif()
